--- a/static/style.css
+++ b/static/style.css
@@ -90,13 +90,13 @@ textarea {
 
 .svg-bg {
   display: block;
-  background-image: url("./imgs/dash-bg.svg");
+  background-image: url("../imgs/dash-bg.svg");
   background-repeat: no-repeat;
 }
 
 .svg-bg2 {
   display: block;
-  background-image: url("./imgs/dash-bg.svg");
+  background-image: url("../imgs/dash-bg.svg");
   background-repeat: no-repeat;
 }
 
@@ -156,11 +156,18 @@ main {
     margin-right: 3rem;
 }
 
+/* 
+  Original gradient followed by potential gradient, note: plain white background also looks good
+  linear-gradient(to bottom, rgba(138,224,242,.52), rgba(82,235,100,.73)),
+  rgb(214, 232, 112), rgba(16, 170, 214, 0.46)),
+  
+	
+*/
 
 .dash-bg {
-  background-image:
-  linear-gradient(to bottom, rgba(138,224,242,.52), rgba(82,235,100,.73)),
-  url('imgs/background.jpg');
+  background-image: linear-gradient(to bottom,
+  rgba(212, 251, 255, 0.52), rgba(16, 170, 214, 0.46)),
+  url('../imgs/background.jpg');
   background-size: cover;
   height: 100vh;
 }
@@ -175,7 +182,7 @@ main {
 
 .grid-container > div {
   padding: 1rem;
-  background-color: transparent;
+  background-color: #e8e8e8;
   text-align: center;
   font-size: 30px;
   border: solid #000 2px;
@@ -303,13 +310,13 @@ ul {
 }
 
 .todo-bg {
-  background-image: url('./imgs/dash-bg.svg');
+  background-image: url('../imgs/dash-bg.svg');
   height: 100vh;
 }
 
 .todo-panel {
     text-align: center;
-    background: transparent;
+    background: #e8e8e8;
     border-radius: .25rem;
     border: solid #000 3px;
     padding: 1.5rem;
@@ -365,11 +372,11 @@ select {
     padding: 0 2rem;
 }
 
+/* Task and Journal for detail views *********************************/
 .log-details {
   width: 650px;
 }
 
-/* Task and Journal for detail views *********************************/
 .j-box {
   display: flex;
   justify-content:space-between;
@@ -432,16 +439,16 @@ button {
 table {
     border-collapse: collapse;
     width: 100%;
-  }
+}
   
-  th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  tr:hover {background-color:#f5f5f5;}
-  .tbl-head:hover {background: #fff;}
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:hover {background-color:#f5f5f5;}
+.tbl-head:hover {background: #fff;}
 
   .fa { 
     font-size: 14pt!important;
@@ -466,16 +473,87 @@ table {
     padding-right: 2rem;
   }
 
+  .date-btn {
+    background: #333;
+    color: #fff;
+    padding: 6px;
+    border: none;
+    height: 28px;
+  }
+
+  .pie-box {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 2rem;
+  }
   /* ---------------------------------+
     Mobile Responsive Section         |
   -----------------------------------*/
   @media only screen and (max-width: 600px) {
-	main {
-	   margin-top: 0;
-	   margin-left: .5rem;
-	   margin-right: .5rem;
-	}
-	.dash-title {
-	   padding: 1rem .5rem;
-	}
+    main {
+      margin-top: 0;
+      margin-left: .5rem;
+      margin-right: .5rem;
+    }
+    .dash-title {
+      padding: 1rem .5rem;
+    }
+  }
+
+  @media only screen and (max-width: 700px) {
+    .opt-desc {
+      display: none;
+    }
+    .log-details {
+      width: 400px;
+    }
+  }
+
+  /* Make Tables Responsive */
+  @media only screen and (max-width: 760px),
+  (min-device-width: 768px) and (max-device-width: 1024px)  {
+    .tbl-head {
+      display: none;
+    }
+    /* Force table to not be like tables anymore */
+    table, thead, tbody, th, td, tr { 
+      display: block; 
+    }
+    
+    /* Hide table headers (but not display: none;, for accessibility) */
+    thead tr { 
+      position: absolute;
+      top: -9999px;
+      left: -9999px;
+    }
+    
+    tr { border: 1px solid #ccc; }
+    
+    td { 
+      /* Behave  like a "row" */
+      border: none;
+      border-bottom: 1px solid #eee; 
+      position: relative;
+      padding-left: 50%; 
+    }
+    
+    td:before { 
+      /* Now like a table header */
+      position: absolute;
+      /* Top/left values mimic padding */
+      top: 6px;
+      left: 6px;
+      width: 45%; 
+      padding-right: 10px; 
+      white-space: nowrap;
+    }
+    
+    /*
+    Label the data
+    */
+    td:nth-of-type(1):before { content: "Journal ID"; }
+    td:nth-of-type(2):before { content: "Title"; }
+    td:nth-of-type(3):before { content: "Preview"; }
+    td:nth-of-type(4):before { content: "Mood Rating"; }
+    td:nth-of-type(5):before { content: "Date Posted"; }
   }
