--- a/static/style.css
+++ b/static/style.css
@@ -481,10 +481,19 @@ tr:hover {background-color:#f5f5f5;}
     height: 28px;
   }
 
+  .spacer {
+    width: 600px;
+  }
+
   .pie-box {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     padding: 2rem;
+    padding-right: 0;
+  }
+
+  .pie-data {
+    width: 500px;
   }
   /* ---------------------------------+
     Mobile Responsive Section         |
