--- a/static/style.css
+++ b/static/style.css
@@ -14,10 +14,13 @@ a {
 
 nav {
     padding: 0 1rem;
+}
+
+.parent-nav {
+    padding: 0 1rem;
     background: #e8e8e8;
     border-bottom: solid 2px;
 }
-
 .app {
     margin-top: 2rem;
 }
@@ -495,7 +498,7 @@ tr:hover {background-color:#f5f5f5;}
   }
 
   .pie-data {
-    width: 500px;
+    width: 700px;
   }
   /* ---------------------------------+
     Mobile Responsive Section         |
