inital commit of new features

--- a/views/todo-list.html
+++ b/views/todo-list.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List App</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <body class="todo-bg">
-    <nav class="topnav parent-nav" id="myTopnav">
+    <nav class="topnav index-nav parent-nav" id="myTopnav">
         <ul>
             <li>
-                <a href="./index.html" class="active">Micro Cloud</a>
+                <a href="../index.html" class="active">Micro Cloud</a>
                 <i class="fa fa-mixcloud"></i>
             </li>
             <li>
@@ -32,14 +32,20 @@
                     <a href="./views/logs.php">All Entries</a>
                 </div>
             </li>
+            <li>
+                <a href="./join-chat.php">Chatroom App</a>
+            </li>
+            <li>
+                <a href="./join-chat.php">Votting App</a>
+            </li>
             <li style="float:right"><a href="#">Donate</a></li>
-            <li style="float:right"><a href="#">Github</a></li>
+            <li style="float:right"><a href="#">GitHub</a></li>
             <a href="javascript:void(0);" class="icon" onclick="navToggle()">
                 <i class="fa fa-bars"></i>
             </a>
         </ul>
     </nav>
-    <form action="./controllers/add_entry.php" method="post" class="app">
+    <form action="../controllers/add_entry.php" method="post" class="app">
         <div class="form-container">
             <div></div>
             <div class="todo-panel">
