--- a/static/style.css
+++ b/static/style.css
@@ -18,8 +18,9 @@ nav {
 
 .parent-nav {
     padding: 0 1rem;
-    background: #e8e8e8;
-    border-bottom: solid 2px;
+    background: #fff;
+    display: flex;
+    justify-content: space-between;
 }
 .app {
     margin-top: 2rem;
@@ -131,14 +132,9 @@ textarea {
 /*-------------------------------------------------------*
 * DASHBOARD SECTION                                      |
 *-------------------------------------------------------*/
+/*
 .dash-title {
-    padding: 2rem;
-    margin: 10px;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    text-align: center;
-    background: transparent;
-    /*background-image: linear-gradient(150deg, #fff 50%, #333 40%);*/
+  margin: 10px;
 }
 
 .dash-title h1 {
@@ -148,10 +144,11 @@ textarea {
 .dash-title p {
   font-size: 22pt;
 }
-
+*/
 .dash-item {
-  color: #000;
+  color: #fff;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .dash-container a {
@@ -159,9 +156,7 @@ textarea {
 }
 
 main {
-    margin-top: 4.20rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
+  padding: 0 2rem;
 }
 
 /* 
@@ -173,27 +168,91 @@ main {
 */
 
 .dash-bg {
+  /*
   background-image: linear-gradient(to bottom,
   rgba(212, 251, 255, 0.52), rgba(16, 170, 214, 0.46)),
   url('../imgs/background.jpg');
   background-size: cover;
+  */
+  background: #f1f1f1;
   height: 100vh;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
+  height: 90vh;
   grid-gap: 10px;
-  padding: 10px;
   margin-top: 1rem;
 }
 
-.grid-container > div {
+.grid-container div{
   padding: 1rem;
-  background-color: #e8e8e8;
   text-align: center;
-  font-size: 30px;
-  border: solid #000 2px;
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+   /*
+  background-image: linear-gradient(to bottom,
+  rgba(212, 251, 255, 0.52), rgba(16, 170, 214, 0.46)),
+  url('../imgs/background.jpg');
+  */
+}
+.grid-container div:nth-child(1){
+  background-image: 
+  linear-gradient(
+    to bottom,
+    rgba(0, 199, 255, 0.68), rgba(0, 199, 255, 0.68)),
+    url(../imgs/test3.jpg);
+  background-position-y: -180px;
+}
+
+.grid-container div:nth-child(2){
+  background-image:
+    linear-gradient(
+      to bottom,
+      rgba(255, 255, 0, 0.863), rgba(255, 255, 0, 0.863)),
+      url(../imgs/music.jpg);
+  background-position-y: -90px;
+  background-position-x: 50px;
+}
+
+.grid-container div:nth-child(3){
+  background-image:
+    linear-gradient(
+      to bottom,
+      rgba(0, 255, 0, 0.863), rgba(0, 255, 0, 0.863)),
+      url(../imgs/journal.jpg);
+  background-size: cover;
+  background-position-y: -50px;
+}
+
+.grid-container div:nth-child(4){
+  background-image:
+    linear-gradient(
+      to bottom,
+      rgba(255, 123, 0, 0.92), rgba(255, 123, 0, 0.92)),
+      url(../imgs/voting.jpg);
+  background-size: cover;
+}
+
+.grid-container div:nth-child(5){
+  background-image:
+    linear-gradient(
+      to bottom,
+      rgba(255, 0, 0, 0.82), rgba(255, 0, 0, 0.82)),
+      url(../imgs/todo.jpg);
+  background-size: cover;
+}
+.grid-container div:nth-child(6){
+  background-image:
+  linear-gradient(
+    to bottom,
+    rgba(140, 0, 255, 0.747), rgba(140, 0, 255, 0.747)),
+    url(../imgs/analytics.jpg);
+  background-size: cover;
 }
 
 .local-app-container {
@@ -234,6 +293,7 @@ ul {
   }
   
   .dropdown-content {
+    margin-top: 1rem;
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -257,6 +317,9 @@ ul {
     display: block; 
   }
  
+  .center-nav li {
+    padding: 0 1rem!important;
+  }
   
   .topnav li {
     float: left;
