--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,7 @@ a {
 
 nav {
     padding: 0 1rem;
+    box-shadow: 0 3px 2px -2px rgba(0,0,0,.2);
 }
 
 .parent-nav {
@@ -34,6 +35,8 @@ textarea {
   font-family: 'PT Sans', sans-serif;
   font-size: 14pt;
   padding: .5rem;
+  background: #f1f1f1;
+  border: none;
 }
 
 .form-container {
@@ -42,13 +45,19 @@ textarea {
 }
 
 #form-control {
-  width: 360px;
+  width: 565px;
+  background: #f1f1f1;
+  border: none;
 }
 
 .spc-n {
   font-family: 'PT Sans', sans-serif;
   font-size: 14pt;
   padding: .5rem;
+}
+
+.spc-m {
+  margin-left: 10px;
 }
 
 #edit-drop {
@@ -72,10 +81,10 @@ textarea {
 
 .slider {
     -webkit-appearance: none;
-    width: 365px;
+    width: 562px;
     height: 15px;
     border-radius: 5px;
-    background: #fff;
+    background: #f1f1f1;
     outline: none;
   }
  
@@ -96,6 +105,76 @@ textarea {
     background: #333;
     cursor: pointer;
   }
+
+  /* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding-top: 26px;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  margin-top: 26px;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
 
 .svg-bg {
   display: block;
@@ -167,7 +246,7 @@ main {
   grid-template-columns: auto auto;
   height: 90vh;
   grid-gap: 10px;
-  margin-top: 1rem;
+  margin: 1rem 0;
 }
 
 .grid-container div{
@@ -264,8 +343,6 @@ ul {
     margin: 0;
   }
   
-
-  
   li a, .dropbtn {
     text-align: center;
     text-decoration: none;
@@ -277,7 +354,7 @@ ul {
   }
   
   .dropdown-content {
-    margin-top: 1rem;
+    margin-top: 0.8rem;
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -334,7 +411,7 @@ ul {
   }
   
   @media screen and (max-width: 600px) {
-    .topnav li:not(:first-child) {display: none;}
+    .topnav-list li {display: none;}
     .topnav a.icon {
       float: right;
       display: block;
@@ -370,27 +447,31 @@ ul {
 }
 
 .todo-panel {
-    background: #e8e8e8;
-    border-radius: .25rem;
-    border: solid #000 3px;
+    background: #fff;
+    border-radius: 5px;
     padding: 1.5rem;
+    box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
 }
 
 .todo-item {
     font-size: 14pt;
     width: 328px;
+    border: solid 1px;
 }
 
 input[type="date"] {
     font-size: 14pt;
+    border: solid 1px;
 }
 
 input[type="time"] {
     font-size: 14pt;
+    border: solid 1px;
 }
 
 select {
     font-size: 14pt;
+    border: solid 1px;
 }
 
 .rep-item {
@@ -437,8 +518,9 @@ select {
   padding: 0 10px;
 }
 
-.j-box p {
-  padding-top: 10px;
+.j-box label {
+  padding-top: 26px;
+  font-size: 22px;
 }
 
 .attach:hover {
@@ -514,7 +596,7 @@ tr:hover {background-color:#f5f5f5;}
 
   .fa.fa-plus-circle {
     font-size: 16pt!important;
-    margin-right:10px;
+    margin-left:10px;
   }
 
   /* ---------------------------------+
@@ -570,8 +652,8 @@ tr:hover {background-color:#f5f5f5;}
     Voting App Section                |
   -----------------------------------*/
   .feature-panel {
-    margin-top: .5rem;
-    padding: 1rem;
+    margin: 1rem 0;
+    padding: 1rem 2rem;
     background-color: #f1f1f1;
     border-radius: 5px;
     display: flex;
@@ -584,6 +666,25 @@ tr:hover {background-color:#f5f5f5;}
     margin-top:1rem;
     padding: .5rem 1rem;
     width: 150px;
+  }
+  .rad-5 {
+    border-radius: 5px;
+  }
+
+  /* use in chat-details.php */
+  .add-btn a {
+    color: #000;
+    font-weight: bold;
+  }
+
+  .polls-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 2rem;
+  }
+  #polls-title {
+    margin-block-start: 0!important;
+    margin-block-end: 0em!important;
   }
   /* ---------------------------------+
     Mobile Responsive Section         |
