--- a/static/style.css
+++ b/static/style.css
@@ -37,6 +37,7 @@ textarea {
   padding: .5rem;
   background: #f1f1f1;
   border: none;
+  width: 565px;
 }
 
 .form-container {
@@ -703,6 +704,15 @@ tr:hover {background-color:#f5f5f5;}
     }
     .dash-title {
       padding: 1rem .5rem;
+    }
+    .todo-panel {
+      width: 400px;
+    }
+    textarea {
+      width: 365px;
+    }
+    #form-control {
+      width: 365px;
     }
   }
 
