--- a/static/style.css
+++ b/static/style.css
@@ -76,9 +76,8 @@ textarea {
 /*-------------------------------------------------------*
 * JOURNAL SECTION                                        |
 *-------------------------------------------------------*/
-.cat-select {
-  margin-bottom: 18px;
-  border: none;
+.review h3 {
+  margin-top: 0px!important;
 }
 
 .sec-2 {
@@ -482,6 +481,10 @@ select {
 /*-------------------------------------------------------*
 * LOGS.PHP SECTION                                       |
 *-------------------------------------------------------*/
+.selector {
+  padding: 5px;
+}
+
 .add-log {
   background: #fff;
   padding:10px;
@@ -490,26 +493,36 @@ select {
 }
 
 #logs-title {
-    margin-block-start: 0!important;
+  margin-block-start: 0!important;
 }
 
 .log-header {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 1rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 #options {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .log-container {
-    padding: 0 2rem;
+  padding: 0 2rem;
 }
 
 /* Task and Journal for detail views *********************************/
+.detail-topper {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2rem;
+}
+
+.editor {
+  margin-top: .5rem;
+}
+
 .log-details {
   width: 650px;
 }
@@ -705,6 +718,7 @@ tr:hover {background-color:#f5f5f5;}
   .add-btn a {
     color: #000;
     font-weight: bold;
+    padding-bottom:1rem;
   }
 
   .polls-header {
