--- a/static/style.css
+++ b/static/style.css
@@ -55,6 +55,8 @@ textarea {
   font-family: 'PT Sans', sans-serif;
   font-size: 14pt;
   padding: .5rem;
+  background: #f1f1f1;
+  border:none;
 }
 
 .spc-m {
@@ -268,11 +270,11 @@ main {
   url('../imgs/background.jpg');
   */
 }
-.grid-container div:nth-child(1){
+.grid-container div{
   background-image: 
   linear-gradient(
     to bottom,
-    rgba(0, 199, 255, 0.68), rgba(0, 199, 255, 0.68)),
+    rgba(138, 224, 242, 0.68), rgba(138, 224, 242, 0.68)),
     url(../imgs/test3.jpg);
   background-position-y: -180px;
 }
@@ -281,7 +283,7 @@ main {
   background-image:
     linear-gradient(
       to bottom,
-      rgba(255, 255, 0, 0.863), rgba(255, 255, 0, 0.863)),
+      rgba(82,235,100, 0.863), rgba(82,235,100, 0.863)),
       url(../imgs/music.jpg);
   background-position-y: -90px;
   background-position-x: 50px;
@@ -329,7 +331,6 @@ main {
     border-radius: .25rem;
     padding: 1.5rem;
 }
-
 /*-------------------------------------------------------*
 * NAV SECTION WITH DROP DOWN MENU ITEMS                  |
 *-------------------------------------------------------*/
@@ -443,7 +444,10 @@ ul {
 /* To Do App Section */
 #form-control2 { 
   width: 345px;
-  padding: 5px;
+  padding: 10px!important;
+  background: #333;
+  color: #fff;
+  border-radius: 5px;
 }
 
 .todo-bg {
@@ -461,6 +465,8 @@ ul {
 .todo-item {
     font-size: 14pt;
     width: 328px;
+    background: #f1f1f1;
+    border: none;
 }
 
 input[type="date"] {
@@ -630,6 +636,7 @@ tr:hover {background-color:#f5f5f5;}
 
   .spc-1 {
     font-size: 35pt!important;
+    
   }
 
   .fa.fa-plus-circle {
@@ -739,18 +746,44 @@ tr:hover {background-color:#f5f5f5;}
       margin-left: .5rem;
       margin-right: .5rem;
     }
+    .form-container {
+      display: block;
+    }
     .dash-title {
       padding: 1rem .5rem;
     }
 
-    .todo-panel { width: 400px; }
-    
-    textarea { width: 365px; }
-
-    .slider { width:375px; }
-    #form-control {
-      width: 365px;
+    .todo-panel { 
+      width: 330px; 
     }
+    
+    textarea { width: 320px; }
+
+    .slider { width:320px; }
+    #form-control {
+      width: 320px;
+    }
+    #form-control2 {
+      width: 300px;
+    }
+    .j-box label {
+      font-size: 18px!important;
+    }
+
+    .rep-item {
+      margin-top: 10px;
+      width: 199px;
+    }
+    
+    /* detail views */
+    .svg-bg {
+      width: 100%;
+    }
+    .log-header {
+      padding-left: 0;
+      padding-right: .6rem;
+    }
+
   }
 
   @media only screen and (max-width: 700px) {
@@ -802,11 +835,12 @@ tr:hover {background-color:#f5f5f5;}
     }
     
     /*
-    Label the data
+    Label the data, need to have different classes for different tables
     */
     td:nth-of-type(1):before { content: "Journal ID"; }
     td:nth-of-type(2):before { content: "Title"; }
     td:nth-of-type(3):before { content: "Preview"; }
-    td:nth-of-type(4):before { content: "Mood Rating"; }
-    td:nth-of-type(5):before { content: "Date Posted"; }
+    td:nth-of-type(4):before { content: "Category"; }  
+    td:nth-of-type(5):before { content: "Mood Rating"; }
+    td:nth-of-type(6):before { content: "Date Posted"; }
   }
