--- a/static/style.css
+++ b/static/style.css
@@ -533,6 +533,10 @@ select {
   width: 650px;
 }
 
+.padb {
+  margin-bottom: .5rem;
+}
+
 .j-box {
   display: flex;
   justify-content:space-between;
@@ -725,7 +729,9 @@ tr:hover {background-color:#f5f5f5;}
   .add-btn a {
     color: #000;
     font-weight: bold;
-    padding-bottom:1rem;
+    border: solid 2px;
+    border-radius: 5px;
+    padding: .5rem;
   }
 
   .polls-header {
