--- a/static/style.css
+++ b/static/style.css
@@ -229,21 +229,7 @@ main {
   padding: 0 2rem;
 }
 
-/* 
-  Original gradient followed by potential gradient, note: plain white background also looks good
-  linear-gradient(to bottom, rgba(138,224,242,.52), rgba(82,235,100,.73)),
-  rgb(214, 232, 112), rgba(16, 170, 214, 0.46)),
-  
-	
-*/
-
 .dash-bg {
-  /*
-  background-image: linear-gradient(to bottom,
-  rgba(212, 251, 255, 0.52), rgba(16, 170, 214, 0.46)),
-  url('../imgs/background.jpg');
-  background-size: cover;
-  */
   background: #f1f1f1;
   height: 100vh;
 }
@@ -264,67 +250,105 @@ main {
   justify-content: center;
   align-items: center;
   border-radius: 8px;
-   /*
-  background-image: linear-gradient(to bottom,
-  rgba(212, 251, 255, 0.52), rgba(16, 170, 214, 0.46)),
-  url('../imgs/background.jpg');
-  */
+  background-repeat: no-repeat;
+  box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
 }
 .grid-container div:nth-child(1){
-  background-image: 
+  background-image:
   linear-gradient(
-    to bottom,
-    rgba(138, 224, 242, 0.68), rgba(138, 224, 242, 0.68)),
-    url(../imgs/test3.jpg);
-  background-position-y: -180px;
+    to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
+    url(../imgs/data-store.jpg);
 }
 
 .grid-container div:nth-child(2){
   background-image:
     linear-gradient(
-      to bottom,
-      rgba(138, 224, 242, 0.68), rgba(138, 224, 242, 0.68)),
-      url(../imgs/database.jpg);
+      to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
+      url(../imgs/chatroom.jpg);
   background-size: cover;
-  background-position-y: -90px;
 }
 
 .grid-container div:nth-child(3){
   background-image:
     linear-gradient(
-      to bottom,
-      rgba(0, 255, 0, 0.863), rgba(0, 255, 0, 0.863)),
+      to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
       url(../imgs/journal.jpg);
   background-size: cover;
-  background-position-y: -50px;
 }
 
 .grid-container div:nth-child(4){
   background-image:
     linear-gradient(
-      to bottom,
-      rgba(255, 123, 0, 0.92), rgba(255, 123, 0, 0.92)),
-      url(../imgs/voting.jpg);
+      to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
+      url(../imgs/todo.jpg);
   background-size: cover;
 }
 
 .grid-container div:nth-child(5){
   background-image:
     linear-gradient(
-      to bottom,
-      rgba(255, 0, 0, 0.82), rgba(255, 0, 0, 0.82)),
+      to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
+      url(../imgs/voting.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.grid-container div:nth-child(6){
+  background-image:
+  linear-gradient(
+    to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
+    url(../imgs/analytics-blur.jpg);
+  background-size: cover;
+}
+/*
+* For dark mode, change dash-item color to #fff
+.grid-container div:nth-child(1){
+  background-image:
+  linear-gradient(
+    to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
+    url(../imgs/data-store.jpg);
+}
+
+.grid-container div:nth-child(2){
+  background-image:
+    linear-gradient(
+      to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
+      url(../imgs/chatroom.jpg);
+  background-size: cover;
+}
+
+.grid-container div:nth-child(3){
+  background-image:
+    linear-gradient(
+      to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
+      url(../imgs/journal.jpg);
+  background-size: cover;
+}
+
+.grid-container div:nth-child(4){
+  background-image:
+    linear-gradient(
+      to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
+      url(../imgs/voting.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.grid-container div:nth-child(5){
+  background-image:
+    linear-gradient(
+      to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
       url(../imgs/todo.jpg);
   background-size: cover;
 }
 .grid-container div:nth-child(6){
   background-image:
   linear-gradient(
-    to bottom,
-    rgba(140, 0, 255, 0.747), rgba(140, 0, 255, 0.747)),
-    url(../imgs/analytics.jpg);
+    to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
+    url(../imgs/analytics-blur.jpg);
   background-size: cover;
 }
-
+*/
 .local-app-container {
     text-align: center;
     background: rgba(255, 255, 255, 1);
@@ -694,7 +718,8 @@ tr:hover {background-color:#f5f5f5;}
 
   .form-control {
     width: 80%;
-    padding: .5rem;
+    padding: 1rem;
+    border: none;
   }
 
   /* ---------------------------------+
@@ -713,9 +738,18 @@ tr:hover {background-color:#f5f5f5;}
       url(../imgs/test3.jpg);
     background-position-y: -180px;
   }
+  
+  .vote-btn {
+    font-weight: bold;
+    border: solid #000 2px;
+    border-radius: 10px;
+    padding: 10px;
+  }
+
   .feature-btns {
     text-align: right;
   }
+
   .feature-btns input {
     margin-top:1rem;
     padding: .5rem 1rem;
@@ -742,6 +776,9 @@ tr:hover {background-color:#f5f5f5;}
   #polls-title {
     margin-block-start: 0!important;
     margin-block-end: 0em!important;
+  }
+  .poll-topic {
+    text-align: center;
   }
   /* ---------------------------------+
     Mobile Responsive Section         |
