--- a/static/style.css
+++ b/static/style.css
@@ -531,7 +531,7 @@ select {
   justify-content: space-between;
   padding-top: 1rem;
   padding-left: 2rem;
-  padding-right: 2rem;
+  padding-right: 1rem;
 }
 
 #options {
@@ -825,6 +825,11 @@ tr:hover {background-color:#f5f5f5;}
     .log-header {
       padding-left: 0;
       padding-right: .6rem;
+    }
+
+    /* add category modal */
+    .modal-content {
+      width: 80%!important;
     }
 
   }
