--- a/static/style.css
+++ b/static/style.css
@@ -817,7 +817,7 @@ tr:hover {background-color:#f5f5f5;}
       width: 199px;
     }
     
-    /* detail views */
+    /* journal detail views */
     .svg-bg {
       width: 100%;
     }
@@ -845,6 +845,7 @@ tr:hover {background-color:#f5f5f5;}
 
     .log-details {
       width: 340px;
+      padding: 0 1rem;
     }
   }
 
