--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ body {
     padding: 0;
     font-family: 'PT Sans', sans-serif;
 }
-
+  
 a {
     text-decoration: none;
 }
@@ -15,6 +15,19 @@ a {
 nav {
     box-shadow: 0 3px 2px -2px rgba(0,0,0,.2);
 }
+
+.fa-wifi {
+  /*font-size: 72px;*/
+  background: -webkit-linear-gradient(blue, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* This style is only useful when mobile nav is clicked
+ul.topnav-list {
+  margin-right: 2.2rem;
+}
+*/
 
 .parent-nav {
     padding: 0 1rem;
@@ -514,6 +527,10 @@ select {
   padding: 5px;
 }
 
+.m-rate {
+  text-align: center;
+}
+
 .add-log {
   background: #fff;
   padding:10px;
@@ -761,7 +778,7 @@ tr:hover {background-color:#f5f5f5;}
     font-weight: bold;
     border: solid 2px;
     border-radius: 5px;
-    padding: .5rem;
+    padding: .35rem;
   }
 
   .polls-header {
@@ -785,8 +802,7 @@ tr:hover {background-color:#f5f5f5;}
     }
     main {
       margin-top: 0;
-      margin-left: .5rem;
-      margin-right: .5rem;
+      padding: 0 1rem;
     }
     .form-container {
       display: block;
@@ -816,7 +832,10 @@ tr:hover {background-color:#f5f5f5;}
       margin-top: 10px;
       width: 199px;
     }
-    
+    /* logs.php */
+    .m-rate {
+      text-align: left;
+    }
     /* journal detail views */
     .svg-bg {
       width: 100%;
@@ -826,7 +845,10 @@ tr:hover {background-color:#f5f5f5;}
       padding-right: .6rem;
       padding-left: 1rem;
     }
-
+    iframe {
+      width: 340px;
+      height: auto;
+    }
     .detail-topper {
       padding: 0 1rem;
     }
@@ -839,10 +861,11 @@ tr:hover {background-color:#f5f5f5;}
   }
 
   @media only screen and (max-width: 700px) {
+    /*
     .opt-desc {
-      display: none;
+      font-size: 12pt;
     }
-
+    */
     .log-details {
       width: 340px;
     }
@@ -870,14 +893,18 @@ tr:hover {background-color:#f5f5f5;}
       left: -9999px;
     }
     
-    tr { border: 1px solid #ccc; }
+    tr { 
+      border: 1px solid #ccc; 
+      margin-top: 1rem;
+      box-shadow: 0 3px 2px -2px rgba(0,0,0,.2);
+    }
     
     td { 
       /* Behave  like a "row" */
       border: none;
       border-bottom: 1px solid #eee; 
       position: relative;
-      padding-left: 50%; 
+      padding-left: 35%; 
     }
     
     td:before { 
