--- a/static/style.css
+++ b/static/style.css
@@ -23,6 +23,49 @@ nav {
   -webkit-text-fill-color: transparent;
 }
 
+.fa-database {
+  background: -webkit-linear-gradient(rgb(18, 183, 216), rgb(16, 236, 42));
+  background: #000;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.fa-comments-o {
+  background: -webkit-linear-gradient(rgb(18, 183, 216), rgb(16, 236, 42));
+  background: #000;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.fa-pencil {
+  background: -webkit-linear-gradient(rgb(18, 183, 216), rgb(16, 236, 42));
+  background: #000;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.fa-list-ol {
+  background: -webkit-linear-gradient(rgb(18, 183, 216), rgb(16, 236, 42));
+  background: #000;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.fa-bar-chart {
+  background: -webkit-linear-gradient(rgb(18, 183, 216), rgb(16, 236, 42));
+  background: #000;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.fa-line-chart {
+  border: #000;
+  background: -webkit-linear-gradient(rgb(18, 183, 216), rgb(16, 236, 42));
+  background: #000;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 /* This style is only useful when mobile nav is clicked
 ul.topnav-list {
   margin-right: 2.2rem;
@@ -49,7 +92,9 @@ textarea {
   padding: .5rem;
   background: #f1f1f1;
   border: none;
-  width: 565px;
+  /*width: 565px;*/
+  width: 1257px;
+  height: 192px;
 }
 
 .form-container {
@@ -523,6 +568,7 @@ select {
 /*-------------------------------------------------------*
 * LOGS.PHP SECTION                                       |
 *-------------------------------------------------------*/
+
 .selector {
   padding: 5px;
 }
@@ -557,6 +603,7 @@ select {
 .log-container {
   padding: 0 2rem;
 }
+
 /* Task and Journal for detail views *********************************/
 .detail-topper {
   padding: 0 2rem;
@@ -566,8 +613,18 @@ select {
   margin-top: .5rem;
 }
 
+.edit-field {
+  height: 80vh!important;
+  margin-top: 0.5rem;
+  /*
+  background: #fff;
+  border:solid #000 2px;
+  */
+}
+
 .log-details {
   width: 650px;
+  margin: 0 auto;
 }
 
 .padb {
@@ -816,8 +873,8 @@ tr:hover {background-color:#f5f5f5;}
     }
     
     textarea { width: 320px; }
-
     .slider { width:320px; }
+
     #form-control {
       width: 320px;
     }
@@ -849,6 +906,7 @@ tr:hover {background-color:#f5f5f5;}
       width: 340px;
       height: auto;
     }
+
     .detail-topper {
       padding: 0 1rem;
     }
@@ -856,6 +914,9 @@ tr:hover {background-color:#f5f5f5;}
     /* add category modal */
     .modal-content {
       width: 80%!important;
+    }
+    .log-bg {
+      background: #f1f1f1;
     }
 
   }
@@ -866,6 +927,9 @@ tr:hover {background-color:#f5f5f5;}
       font-size: 12pt;
     }
     */
+    .opt-desc {
+      display: none;
+    }
     .log-details {
       width: 340px;
     }
