--- a/static/style.css
+++ b/static/style.css
@@ -150,9 +150,8 @@ textarea {
 
 .slider {
     -webkit-appearance: none;
-    width: 562px;
-    height: 15px;
-    border-radius: 5px;
+    width: 100%;
+    height: 20px;
     background: #f1f1f1;
     outline: none;
   }
@@ -561,6 +560,7 @@ input[type="date"] {
 
 input[type="time"] {
     font-size: 14pt;
+    text-align: center;
 }
 
 select {
@@ -858,7 +858,12 @@ tr:hover {background-color:#f5f5f5;}
   /* ---------------------------------+
     Mobile Responsive Section         |
   -----------------------------------*/
+  /* used for smart phones */
   @media only screen and (max-width: 600px) {
+    /* nav bar */
+    .topnav-list {
+      margin-right: 1.6rem;
+    }
     .parent-nav {
       padding: 0;
     }
@@ -883,9 +888,17 @@ tr:hover {background-color:#f5f5f5;}
     #form-control {
       width: 320px;
     }
+    
     #form-control2 {
       width: 300px;
     }
+    
+    .cat-list {
+      width: 320px;
+      margin-left: 0;
+      margin-top: 20px;
+    }
+
     .j-box label {
       font-size: 18px!important;
     }
