--- a/static/style.css
+++ b/static/style.css
@@ -670,7 +670,7 @@ button {
 }
 
 .message-p {
-  font-size: 15pt;
+  font-size: 18pt;
 }
 /* Categories Section *************************/
 .cat-grid {
@@ -912,6 +912,9 @@ tr:hover {background-color:#f5f5f5;}
       text-align: left;
     }
     /* journal detail views */
+    .message-p {
+      font-size: 16pt;
+    }
     .svg-bg {
       width: 100%;
     }
