--- a/static/style.css
+++ b/static/style.css
@@ -88,7 +88,7 @@ ul.topnav-list {
 
 textarea {
   font-family: 'PT Sans', sans-serif;
-  font-size: 14pt;
+  font-size: 21pt;
   padding: .5rem;
   background: #f1f1f1;
   border: none;
@@ -610,10 +610,6 @@ select {
 }
 
 /* Task and Journal for detail views *********************************/
-.detail-topper {
-  padding: 0 2rem;
-}
-
 .editor {
   margin-top: .5rem;
 }
@@ -628,13 +624,13 @@ select {
 }
 
 .log-details {
-  width: 750px;
+  width: 760px;
   margin: 0 auto;
 }
 
 .padb {
   margin-bottom: .5rem;
-  font-size: 22pt;
+  font-size: 25pt;
 }
 
 .j-box {
@@ -656,7 +652,7 @@ select {
 
 .attach {
   background: #333;
-  padding: 10px;
+  padding: 1rem;
   color: #fff;
 }
 
@@ -671,7 +667,7 @@ button {
 }
 
 .message-p {
-  font-size: 22pt;
+  font-size: 19pt;
 }
 /* Categories Section *************************/
 .cat-grid {
@@ -789,7 +785,9 @@ tr:hover {background-color:#f5f5f5;}
     left: 0;
     bottom: 0;
     width: 100%;
-    padding: 0 2rem;
+    padding: 10px 2rem;
+    background: #f1f1f1;
+    margin-bottom: 0;
   }
 
   .form-control {
@@ -883,7 +881,10 @@ tr:hover {background-color:#f5f5f5;}
       width: 330px; 
     }
     
-    textarea { width: 320px; }
+    textarea { 
+      width: 320px;
+      font-size: 16pt;
+    }
     .slider { width:320px; }
 
     #form-control {
@@ -954,6 +955,7 @@ tr:hover {background-color:#f5f5f5;}
     }
     .log-details {
       width: 340px;
+      margin: 0;
     }
 
     .editor {
@@ -1005,12 +1007,35 @@ tr:hover {background-color:#f5f5f5;}
     }
     
     /*
-    Label the data, need to have different classes for different tables
+    Labeling mobile tables: Journal Section
     */
-    td:nth-of-type(1):before { content: "Journal ID"; }
-    td:nth-of-type(2):before { content: "Title"; }
-    td:nth-of-type(3):before { content: "Preview"; }
-    td:nth-of-type(4):before { content: "Category"; }  
-    td:nth-of-type(5):before { content: "Mood Rating"; }
-    td:nth-of-type(6):before { content: "Date Posted"; }
+    .journal-tab td:nth-of-type(1):before { content: "Journal ID"; }
+    .journal-tab td:nth-of-type(2):before { content: "Title"; }
+    .journal-tab td:nth-of-type(3):before { content: "Preview"; }
+    .journal-tab td:nth-of-type(4):before { content: "Category"; }  
+    .journal-tab td:nth-of-type(5):before { content: "Mood Rating"; }
+    .journal-tab td:nth-of-type(6):before { content: "Date Posted"; }
+
+    /*
+    Labeling mobile tables: Task Section
+    */
+    .task-tab td:nth-of-type(1):before { content: "Task ID"; }
+    .task-tab td:nth-of-type(2):before { content: "Title"; }
+    .task-tab td:nth-of-type(3):before { content: "Status"; }
+    .task-tab td:nth-of-type(4):before { content: "Due Date"; }  
+    .task-tab td:nth-of-type(5):before { content: "Time Due"; }
+    .task-tab td:nth-of-type(6):before { content: "Priority"; }
+    .task-tab td:nth-of-type(7):before { content: "Date Posted"; }
+
+    /*
+    Labeling mobile tables: Voting Section
+    */
+    .poll-tab td:nth-of-type(1):before { content: "Poll ID"; }
+    .poll-tab td:nth-of-type(2):before { content: "Topic"; }
+    .poll-tab td:nth-of-type(3):before { content: "Result"; }
+    .poll-tab td:nth-of-type(4):before { content: "Creator"; }  
+    .poll-tab td:nth-of-type(5):before { content: "Yes Count"; }
+    .poll-tab td:nth-of-type(6):before { content: "No Count"; }
+    .poll-tab td:nth-of-type(7):before { content: "Maybe Count"; }
+    .poll-tab td:nth-of-type(8):before { content: "Date Created"; }
   }
