--- a/static/style.css
+++ b/static/style.css
@@ -88,7 +88,7 @@ ul.topnav-list {
 
 textarea {
   font-family: 'PT Sans', sans-serif;
-  font-size: 21pt;
+  font-size: 16pt;
   padding: .5rem;
   background: #f1f1f1;
   border: none;
@@ -151,7 +151,7 @@ textarea {
 .slider {
     -webkit-appearance: none;
     width: 100%;
-    height: 20px;
+    height: 12px;
     background: #f1f1f1;
     outline: none;
   }
@@ -429,7 +429,7 @@ ul {
   .dropdown .dropbtn {
     border: none;
     outline: none;
-    background-color: inherit;
+    background-color: #fff;
     font-family: inherit;
     margin: 0;
   }
@@ -617,6 +617,7 @@ select {
 .edit-field {
   height: 80vh!important;
   margin-top: 0.5rem;
+  font-size: 21pt;
   /*
   background: #fff;
   border:solid #000 2px;
@@ -885,7 +886,12 @@ tr:hover {background-color:#f5f5f5;}
       width: 320px;
       font-size: 16pt;
     }
-    .slider { width:320px; }
+    .edit-field {
+      font-size: 16pt;
+    }
+    .slider { 
+      width:320px;
+    }
 
     #form-control {
       width: 320px;
