--- a/static/style.css
+++ b/static/style.css
@@ -288,6 +288,8 @@ textarea {
 
 main {
   padding: 0 2rem;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .dash-bg {
@@ -318,7 +320,7 @@ main {
   background-image:
   linear-gradient(
     to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
-    url(../imgs/data-store.jpg);
+    url(../imgs/journal.jpg);
 }
 
 .grid-container div:nth-child(2){
@@ -333,7 +335,7 @@ main {
   background-image:
     linear-gradient(
       to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
-      url(../imgs/journal.jpg);
+      url(../imgs/data-store.jpg);
   background-size: cover;
 }
 
@@ -611,17 +613,17 @@ select {
 
 /* Task and Journal for detail views *********************************/
 .editor {
-  margin-top: .5rem;
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .edit-field {
   height: 80vh!important;
-  margin-top: 0.5rem;
+  margin-top: 2.5rem;
   font-size: 21pt;
-  /*
+  box-shadow: 0px 0px 18px 7px rgba(0,0,0,.2);;
   background: #fff;
-  border:solid #000 2px;
-  */
 }
 
 .log-details {
@@ -870,6 +872,7 @@ tr:hover {background-color:#f5f5f5;}
     main {
       margin-top: 0;
       padding: 0 1rem;
+      width: 90%;
     }
     .form-container {
       display: block;
@@ -888,6 +891,7 @@ tr:hover {background-color:#f5f5f5;}
     }
     .edit-field {
       font-size: 16pt;
+      margin-top: .5rem;
     }
     .slider { 
       width:320px;
@@ -966,6 +970,12 @@ tr:hover {background-color:#f5f5f5;}
 
     .editor {
       padding: 0 1rem;
+      width: 375px;
+      text-align: left;
+    }
+
+    .edit-field {
+      margin-top: .5rem;
     }
   }
 
