--- a/static/style.css
+++ b/static/style.css
@@ -865,6 +865,11 @@ tr:hover {background-color:#f5f5f5;}
   /* ---------------------------------+
     Mobile Responsive Section         |
   -----------------------------------*/
+  @media screen and (max-height: 700px) {
+    textarea.edit-field {
+      width: 800px;
+    }
+  }
   
   /* removed only keyword before screen keyword 6/18 */
   @media screen and (max-width: 700px) {
