--- a/static/style.css
+++ b/static/style.css
@@ -701,6 +701,10 @@ button {
   font-size: 25px;
 }
 /* Todo & Journal Icons ***********************/
+.todo-txt-area {
+  width: 328px!important;
+  height: 125px!important;
+}
 .fa-save:before {
   padding-right: 8px;
 }
@@ -865,6 +869,11 @@ tr:hover {background-color:#f5f5f5;}
   /* ---------------------------------+
     Mobile Responsive Section         |
   -----------------------------------*/
+  @media screen and (min-height: 930px) {
+    textarea {
+      height: 420px;
+    }
+  }
   @media screen and (max-height: 700px) {
     textarea.edit-field {
       width: 800px;
